--- a/refer-javascript/javascriptRefer01.html
+++ b/refer-javascript/javascriptRefer01.html
@@ -632,6 +632,21 @@
         //     })
         // })
 
+        //정답보기
+        // document.querySelector(".result-box h3").addEventListener("click", result-boxBtn);
+        // function result-boxBtn(event){      a태그에 #을 없애주는 역할
+        //     event.preventDefault();
+        //     document.querySelector(".result div").classList.toggle("active");
+        // }
+
+        //한번에 하는 방법
+        // document.querySelectorAll(".result-box h3").forEach(el => {
+        //     el.addEventListener("click", function(){
+        //         event.preventDefault();
+        //         this.parentNode.classList.toggle("active")
+        //     });
+        // })
+
         //sample01
         //01. 변수 : 데이터 저장소
         {
