--- a/site/index.html
+++ b/site/index.html
@@ -51,6 +51,10 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.../assets2/js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        .bgs11 {
+            background-image: linear-gradient(-225deg, #A445B2 0%, #D41872 52%, #FF0066 100%);        }
+    </style>
 </head>
 
 <body>
@@ -76,7 +80,7 @@
             </nav>
         </div>
     </header>
-    <div class="bs-header bgs1" id="content">
+    <div class="bs-header bgs11" id="content">
         <div class="container">
             <h1>Site Reference v1.0 &lt;/doc&gt;</h1>
             <p><a href="https://kdong1224.github.io/dothome21/" target="_blank">kdong1224.github.io</a></p>
@@ -84,18 +88,12 @@
     </div>
     <div class="container bs-docs-container">
         <div class="row">
-            <div class="col-md-9" role="main">
+            <div class="col-md-12" role="main">
                 
                 <!-- Intro1 -->
                 <div class="bs-docs-section">
                     <h2 id="intro1" class="page-header">Card 유형</h2>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="thumbnail">
-                                <img src="img/cardType-index.png" alt="Card 유형">
-                            </a>
-                        </div>
-                    </div>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FBPxuvXcOOiQ5gimX8yHllp%2F%25EC%259B%25B9%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D188%253A66" allowfullscreen></iframe>
                     <p>코드 보기 <a href="cardType.html">View</a></p>
                 </div>
                 <!-- //Intro1 -->
@@ -103,50 +101,33 @@
                 <!-- Intro2 -->
                 <div class="bs-docs-section">
                     <h2 id="intro2" class="page-header">Image 유형</h2>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="thumbnail">
-                                <img src="img/imageType-index.png" alt="Image 유형">
-                            </a>
-                        </div>
-                    </div>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FBPxuvXcOOiQ5gimX8yHllp%2F%25EC%259B%25B9%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D188%253A660" allowfullscreen></iframe>
                     <p>코드 보기 <a href="imgType.html">View</a></p>
                 </div>
                 <!-- //Intro2 -->
 
                 <!-- Intro3 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro3" class="page-header">hoverEffect 유형</h2>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="thumbnail">
-                                <img src="img/hoverEffectType-index.png" alt="hoverEffect 유형">
-                            </a>
-                        </div>
-                    </div>
-                    <p>코드 보기 <a href="hoverEffectType.html">View</a></p>
+                    <h2 id="intro3" class="page-header">Slider 유형</h2>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FBPxuvXcOOiQ5gimX8yHllp%2F%25EC%259B%25B9%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D188%253A890" allowfullscreen></iframe>
+                    <p>코드 보기 <a href="slideType.html">View</a></p>
                 </div>
                 <!-- //Intro3 -->
 
                 <!-- Intro4 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro4" class="page-header">Slider 유형</h2>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="thumbnail">
-                                <img src="img/SliderType-index.png" alt="Slider 유형">
-                            </a>
-                        </div>
-                    </div>
-                    <p>코드 보기 <a href="sliderType.html">View</a></p>
+                    <h2 id="intro4" class="page-header">hoverEffect 유형</h2>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FBPxuvXcOOiQ5gimX8yHllp%2F%25EC%259B%25B9%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D188%253A891" allowfullscreen></iframe>
+                    <p>코드 보기 <a href="hoverEffectType.html">View</a></p>
                 </div>
                 <!-- //Intro4 -->
 
+
             </div>
-            <!-- //col-md-9 -->
+            <!-- //col-md-12 -->
 
             <!-- //col-md-3 -->
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <div class="bs-sidebar hidden-print" role="complementary">
                     <ul class="nav bs-sidenav">
                         <li><a href="#intro1">Card 유형</a></li>
@@ -155,7 +136,7 @@
                         <li><a href="#intro4">Slider 유형</a></li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
             <!--//col-md-3 -->
         </div>
         <!-- //row -->
