--- a/refer-jquery/jqueryRefer04.html
+++ b/refer-jquery/jqueryRefer04.html
@@ -46,30 +46,140 @@
 
             <div class="table">
                 <table>
-                    <caption>기본 선택자</caption>
                     <colgroup>
-                        <col style="width: 4%">
+                        <col style="width: 8%">
                         <col style="width: 20%">
                         <col style="width: 20%">
                         <col style="width: 20%">
-                        <col style="width: 36%">
+                        <col style="width: 32%">
                     </colgroup>
                     <thead>
                         <tr>
-                            <th class="center">번호</th>
-                            <th>종류</th>
+                            <th class="center">종류</th>
                             <th>jQuery</th>
+                            <th>예시</th>
                             <th>Javascript</th>
                             <th>설명</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="center" rowspan="5"><a href="#sample01">1</a></td>
-                            <td>태그 선택자</td>
-                            <td>$("li")</td>
-                            <td>querySelectorAll("li")</td>
-                            <td>기본 태그를 선택합니다.</td>
+                            <td class="center" rowspan="1">복사</td>
+                            <td>.clone()</td>
+                            <td>$("selector").clone()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="center" rowspan="12">추가</td>
+                            <td>.wrap()</td>
+                            <td>$("selector").wrap()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.wrapInner()</td>
+                            <td>$("selector").wrapInner()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.append() ❤️</td>
+                            <td>$("selector").append()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.appendTo() ❤️</td>
+                            <td>$("selector").appendTo()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.prepend() ❤️</td>
+                            <td>$("selector").prepend()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.prependTo() ❤️</td>
+                            <td>$("selector").prependTo()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.after()</td>
+                            <td>$("selector").after()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.before()</td>
+                            <td>$("selector").before()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.insertAfter()</td>
+                            <td>$("selector").insertAfter()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.insertBefore()</td>
+                            <td>$("selector").insertBefore()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.html() ❤️</td>
+                            <td>$("selector").html()</td>
+                            <td>innerHTML</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.text() ❤️</td>
+                            <td>$("selector").text()</td>
+                            <td>innerTEXT</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="center" rowspan="4">삭제</td>
+                            <td>.detach()</td>
+                            <td>$("selector").detach()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.empty()</td>
+                            <td>$("selector").empty()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.remove() ❤️</td>
+                            <td>$("selector").remove()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.unwrap()</td>
+                            <td>$("selector").unwrap()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="center" rowspan="2">대체</td>
+                            <td>.replaceAll()</td>
+                            <td>$("selector").replaceAll()</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>.replaceWith()</td>
+                            <td>$("selector").replaceWith()</td>
+                            <td>-</td>
+                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -78,24 +188,19 @@
             <hr>
 
             <!-- sample01 -->
-            <div id="sample01" class="sample">
-                <h2>01. 기본 선택자 <span class="dot"></span></h2>
+            <!-- <div id="sample01" class="sample">
+                <h2>01.  <span class="dot"></span></h2>
                 <div class="view view1">
                     <ul>
-                        <li>$("li")</li>
-                        <li class="class">$(".class")</li>
-                        <li id="id">$("#id")</li>
-                        <li>$(".class, #id")</li>
-                        <li>$("*")</li>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li>4</li>
+                        <li>5</li>
                     </ul>
                 </div>
                 <div class="btn btn1">
                     <a href="#c" class="reset1">리셋</a>
-                    <a href="#c" class="btn1-1">클릭하면 클래스(.class)를 선택합니다.</a>
-                    <a href="#c" class="btn1-2">클릭하면 아이디(#id)를 선택합니다.</a>
-                    <a href="#c" class="btn1-3">클릭하면 기본 태그를 선택합니다.</a>
-                    <a href="#c" class="btn1-4">클릭하면 여러가지(#id, .class) 태그를 선택합니다.</a>
-                    <a href="#c" class="btn1-5">클릭하면 전채 태그(*)를 선택합니다.</a>
                 </div>
                 <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -107,11 +212,10 @@
 
             <script> 
                 
-            </script>
+            </script> -->
 
             <!-- //sample01 -->
 
-            <hr>
             <hr>
             
         </main>
