--- a/site/index.html
+++ b/site/index.html
@@ -53,7 +53,8 @@
     <![endif]-->
     <style>
         .bgs11 {
-            background-image: linear-gradient(-225deg, #A445B2 0%, #D41872 52%, #FF0066 100%);        }
+            background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);
+        }
     </style>
 </head>
 
