--- a/refer-javascript/javascriptRefer01.html
+++ b/refer-javascript/javascriptRefer01.html
@@ -647,6 +647,10 @@
         //     });
         // })
 
+        // ${".result-box h3"}.click(function(){
+        //     ${".result-box"}.toggleClass("active");
+        // });
+
         //sample01
         //01. 변수 : 데이터 저장소
         {
