--- a/site/index.html
+++ b/site/index.html
@@ -117,11 +117,19 @@
 
                 <!-- Intro4 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro4" class="page-header">hoverEffect 유형</h2>
+                    <h2 id="intro4" class="page-header">Fome 유형</h2>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FBPxuvXcOOiQ5gimX8yHllp%2F%25EC%259B%25B9%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D455%253A54" allowfullscreen></iframe>
+                    <p>코드 보기 <a href="#">View</a></p>
+                </div>
+                <!-- //Intro4 -->
+                
+                <!-- Intro5 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro5" class="page-header">hoverEffect 유형</h2>
                     <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FBPxuvXcOOiQ5gimX8yHllp%2F%25EC%259B%25B9%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D188%253A891" allowfullscreen></iframe>
                     <p>코드 보기 <a href="hoverEffectType.html">View</a></p>
                 </div>
-                <!-- //Intro4 -->
+                <!-- //Intro5 -->
 
 
             </div>
