--- a/refer-effect/menuEffect/javascriptME01.html
+++ b/refer-effect/menuEffect/javascriptME01.html
@@ -41,9 +41,24 @@
     <div id="modal">
         <div class="modal-bg">
             <div class="modal-cont">
-                <h2>레이어 팝업</h2>
+                <h2>기리보이 - 성인</h2>
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    넌 아직도 그 일을 하고 있니? <br>
+                    난 아직도 그 일을 하고 있지<br>
+                    나름대로 잘 돼서 나는 너무 행복한데<br>
+                    생각이 너무 많아 밤에는 못 자고 있지<br>
+                    아무런 상관없는 너가<br>
+                    너무 바빠 다 잊고 생각 안 나던 너가<br>
+                    너에게 말한 바램들을 다 이루고 나서야<br>
+                    내팽개친 순수함을 난 다시 주워 담고 있지<br>
+                    얼마 전 너의 번홀 찾았어<br>
+                    다행이야, 나도 번호를 안 바꿔서<br>
+                    혹시 이건 미련일까 한참 생각해봤지만<br>
+                    이건 그냥 생각나서에 조금 더 가까워<br>
+                    이런 날이 올까 상상도 못 했어 난<br>
+                    예전에 우리 치고 박고 난리도 아니었잖아<br>
+                    그래, 그땐 그게 정말 최선의 방법이었어<br>
+                    지금은 절대 겪을 수 없는 큰 감동이었어
                 </p>
                 <button>닫기</button>
             </div>
