--- a/refer-effect/menuEffect/jqueryME01.html
+++ b/refer-effect/menuEffect/jqueryME01.html
@@ -62,17 +62,21 @@
             #tab-menu {
                 width: 80vw;
             }
+            .tab-btn li a {
+                font-size: 14px;
+                padding: 14px 10px 9px 10px;
+            }
             .tab-cont > div h2 {
-                font-size: 18px;
+                font-size: 14px;
                 white-space: nowrap;
             }
             .tab-cont > div p {
-                font-size: 14px
+                font-size: 12px
             }
         }
     </style>
 </head>
-<body class="bg bg6">
+<body class="bg bg10">
 
     <!-- contents -->
     <main>
