--- a/refer-effect/menuEffect/jqueryME01.html
+++ b/refer-effect/menuEffect/jqueryME01.html
@@ -12,7 +12,7 @@
     <style>
         #tab-menu {
             width: 600px;
-            background: #FF0F80;
+            background: #05204A;
             position: absolute;
             left: 50%;
             top: 50%;
@@ -38,8 +38,8 @@
             display: block;
         }
         .tab-btn li.active a {
-            border-bottom: 3px solid #F0F600;
-            color: #F0F600;
+            border-bottom: 3px solid #F63E02;
+            color: #F63E02;
         }
         .tab-cont {
             background: #fff;
@@ -74,9 +74,13 @@
                 font-size: 12px
             }
         }
+        .iframe.play {
+            width: 0;
+            height: 0;
+        }
     </style>
 </head>
-<body class="bg bg10">
+<body class="bg bg11">
 
     <!-- contents -->
     <main>
