--- a/refer-javascript/javascriptRefer05.html
+++ b/refer-javascript/javascriptRefer05.html
@@ -60,6 +60,7 @@
             <li><a href="#sample05">문자열 메서드 : indexOf() : 문자열 검색하기 : 반환(숫자)</a></li>
             <li><a href="#sample05">문자열 메서드 : lastIndexOf() : 문자열 검색하기 : 반환(숫자)</a></li>
             <li><a href="#sample05">문자열 메서드 : search() : 문자열 검색하기 : 반환(숫자)</a></li>
+            <li><a href="#sample05">문자열 메서드 : match() : 문자열 검색하기 : 반환(배열)</a></li>
             <li><a href="#sample05">문자열 메서드 : includes() : 문자열 포함 여부 : 반환(불린)</a></li>
             <li><a href="#sample05">문자열 메서드 : startWith() : 문자열 포함 여부 : 반환(불린)</a></li>
             <li><a href="#sample05">문자열 메서드 : endWith() : 문자열 포함 여부 : 반환(불린)</a></li>
@@ -391,6 +392,18 @@
                         <td class="sample05_M11"></td>
                         <td class="sample05_R11 result"></td>
                     </tr>
+                    <tr>
+                        <td class="sample05_N12"></td>
+                        <td class="sample05_Q12"></td>
+                        <td class="sample05_M12"></td>
+                        <td class="sample05_R12 result"></td>
+                    </tr>
+                    <tr>
+                        <td class="sample05_N13"></td>
+                        <td class="sample05_Q13"></td>
+                        <td class="sample05_M13"></td>
+                        <td class="sample05_R13 result"></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
@@ -400,6 +413,7 @@
     //문자열이 없는 경우는 -1
     //영문 대소문자 구별하여 검색
     //search는 정규식 표현으로 검색
+    //match는 배열로 표현되고 없으면 아무것도 안나옴
     //includes는 포함된걸 찾기 때문에 true, false로 나옴
     //starstWith는 처음에 있는지 유무판단
     //endsWith는 끝에 있는지 유무판단
@@ -427,17 +441,23 @@
     const text7 = str.search(/jquery/);
     document.querySelector(".sample05_R7").innerHTML = text7;
 
-    const text8 = str.includes("javascript");
+    const text8 = str.match(/javascript/);
     document.querySelector(".sample05_R8").innerHTML = text8;
 
-    const text9 = str.includes("jquery");
+    const text9 = str.match(/jquery/);
     document.querySelector(".sample05_R9").innerHTML = text9;
 
-    const text10 = str.startsWith("자바스크립트");
+    const text10 = str.includes("javascript");
     document.querySelector(".sample05_R10").innerHTML = text10;
 
-    const text11 = str.endsWith("javascript");
+    const text11 = str.includes("jquery");
     document.querySelector(".sample05_R11").innerHTML = text11;
+
+    const text12 = str.startsWith("자바스크립트");
+    document.querySelector(".sample05_R12").innerHTML = text12;
+
+    const text13 = str.endsWith("javascript");
+    document.querySelector(".sample05_R13").innerHTML = text13;
 }
 </code></pre>
         </div>
@@ -1065,6 +1085,7 @@
         //문자열이 없는 경우는 -1
         //영문 대소문자 구별하여 검색
         //search는 정규식 표현으로 검색
+        //match는 배열로 표현되고 없으면 아무것도 안나옴
         //includes는 포함된걸 찾기 때문에 true, false로 나옴
         //starstWith는 처음에 있는지 유무판단
         //endsWith는 끝에 있는지 유무판단
@@ -1120,33 +1141,47 @@
             document.querySelector(".sample05_M7").innerHTML = "search(/jquery/)";
             document.querySelector(".sample05_R7").innerHTML = text7;
 
-            const text8 = str.includes("javascript");
+            const text8 = str.match(/javascript/);
 
             document.querySelector(".sample05_N8").innerHTML = "8";
             document.querySelector(".sample05_Q8").innerHTML = str;
-            document.querySelector(".sample05_M8").innerHTML = "includes('javascript')";
+            document.querySelector(".sample05_M8").innerHTML = "match(/javascript/)";
             document.querySelector(".sample05_R8").innerHTML = text8;
 
-            const text9 = str.includes("jquery");
+            const text9 = str.match(/jquery/);
 
             document.querySelector(".sample05_N9").innerHTML = "9";
             document.querySelector(".sample05_Q9").innerHTML = str;
-            document.querySelector(".sample05_M9").innerHTML = "includes('jquery')";
+            document.querySelector(".sample05_M9").innerHTML = "match(/jquery/)";
             document.querySelector(".sample05_R9").innerHTML = text9;
 
-            const text10 = str.startsWith("자바스크립트");
+            const text10 = str.includes("javascript");
 
             document.querySelector(".sample05_N10").innerHTML = "10";
             document.querySelector(".sample05_Q10").innerHTML = str;
-            document.querySelector(".sample05_M10").innerHTML = "startsWith('자바스크립트')";
+            document.querySelector(".sample05_M10").innerHTML = "includes('javascript')";
             document.querySelector(".sample05_R10").innerHTML = text10;
 
-            const text11 = str.endsWith("javascript");
+            const text11 = str.includes("jquery");
 
             document.querySelector(".sample05_N11").innerHTML = "11";
             document.querySelector(".sample05_Q11").innerHTML = str;
-            document.querySelector(".sample05_M11").innerHTML = "endsWith('javascript')";
+            document.querySelector(".sample05_M11").innerHTML = "includes('jquery')";
             document.querySelector(".sample05_R11").innerHTML = text11;
+
+            const text12 = str.startsWith("자바스크립트");
+
+            document.querySelector(".sample05_N12").innerHTML = "12";
+            document.querySelector(".sample05_Q12").innerHTML = str;
+            document.querySelector(".sample05_M12").innerHTML = "startsWith('자바스크립트')";
+            document.querySelector(".sample05_R12").innerHTML = text12;
+
+            const text13 = str.endsWith("javascript");
+
+            document.querySelector(".sample05_N13").innerHTML = "13";
+            document.querySelector(".sample05_Q13").innerHTML = str;
+            document.querySelector(".sample05_M13").innerHTML = "endsWith('javascript')";
+            document.querySelector(".sample05_R13").innerHTML = text13;
         }
 
         //sample06
