--- a/refer-javascript/javascriptRefer10.html
+++ b/refer-javascript/javascriptRefer10.html
@@ -12,16 +12,6 @@
         integrity="sha512-mIs9kKbaw6JZFfSuo+MovjU+Ntggfoj8RwAmJbVXQ5mkAX5LlgETQEweFPI18humSPHymTb5iikEOKWF7I8ncQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <style>
-        @media(max-width: 500px){
-            #sample04 .btn a {
-                font-size: 9px;
-            }
-            #sample04 .ex4 p {
-                font-size: 10px;
-            }
-        }
-    </style>
 </head>
 
 <body id="wrap">
@@ -63,17 +53,17 @@
     <div class="list">
         <ol>
             <li><a href="#sample01">브라우저 객체 : window 객체 메서드 : window.alert() : 알림창</a></li>
-            <li><a href="#sample01">브라우저 객체 : window 객체 메서드 : window.confirm() : 확인창</a></li>
-            <li><a href="#sample01">브라우저 객체 : window 객체 메서드 : window.prompt() : 입력창</a></li>
+            <li><a href="#sample02">브라우저 객체 : window 객체 메서드 : window.confirm() : 확인창</a></li>
+            <li><a href="#sample03">브라우저 객체 : window 객체 메서드 : window.prompt() : 입력창</a></li>
             
             <br>
 
-            <li><a href="#sample">브라우저 객체 : window 객체 속성 : window.innerWidth : 브라우저 화면의 가로 값을 가져옵니다.</a></li>
-            <li><a href="#sample">브라우저 객체 : window 객체 속성 : window.innerHeight : 브라우저 화면의 세로 값을 가져옵니다.</a></li>
-            <li><a href="#sample">브라우저 객체 : window 객체 속성 : window.outerWidth : 브라우저 전체의 가로 값을 가져옵니다.</a></li>
-            <li><a href="#sample">브라우저 객체 : window 객체 속성 : window.outerHeight : 브라우저 전체의 세로 값을 가져옵니다.</a></li>
-            <li><a href="#sample">브라우저 객체 : window 객체 속성 : window.screenLeft / window.screenX : 브라우저 왼쪽 위치 값을 가져옵니다.</a></li>
-            <li><a href="#sample">브라우저 객체 : window 객체 속성 : window.screenTop / window.screenY : 브라우저 윗쪽 위치 값을 가져옵니다.</a></li>
+            <li><a href="#sample04">브라우저 객체 : window 객체 속성 : window.innerWidth : 브라우저 화면의 가로 값을 가져옵니다.</a></li>
+            <li><a href="#sample04">브라우저 객체 : window 객체 속성 : window.innerHeight : 브라우저 화면의 세로 값을 가져옵니다.</a></li>
+            <li><a href="#sample04">브라우저 객체 : window 객체 속성 : window.outerWidth : 브라우저 전체의 가로 값을 가져옵니다.</a></li>
+            <li><a href="#sample04">브라우저 객체 : window 객체 속성 : window.outerHeight : 브라우저 전체의 세로 값을 가져옵니다.</a></li>
+            <li><a href="#sample04">브라우저 객체 : window 객체 속성 : window.screenLeft / window.screenX : 브라우저 왼쪽 위치 값을 가져옵니다.</a></li>
+            <li><a href="#sample04">브라우저 객체 : window 객체 속성 : window.screenTop / window.screenY : 브라우저 윗쪽 위치 값을 가져옵니다.</a></li>
 
             <br>
 
@@ -88,12 +78,24 @@
             
             <br>
 
-            <li><a href="#sample">브라우저 객체 : screen 객체 속성 : window.screen.width : 화면의 가로 값을 가져옵니다.</a></li>
-            <li><a href="#sample">브라우저 객체 : screen 객체 속성 : window.screen.height : 화면의 세로 값을 가져옵니다.</a></li>
-            <li><a href="#sample">브라우저 객체 : screen 객체 속성 : window.screen.availWidth : 실제 이용 가능한 화면의 가로 값을 가져옵니다.</a></li>
-            <li><a href="#sample">브라우저 객체 : screen 객체 속성 : window.screen.availHeight : 실제 이용 가능한 화면의 세로 값을 가져옵니다.</a></li>
-            <li><a href="#sample">브라우저 객체 : screen 객체 속성 : window.screen.colorDepth : 사용 가능한 색상 수를 바꿀수 있습니다.</a></li>
-            <li><a href="#sample">브라우저 객체 : screen 객체 속성 : window.screen.pixelDepth : 한 픽셀당 비트 수를 바꿀수 있습니다.</a></li>
+            <li><a href="#sample05">브라우저 객체 : screen 객체 속성 : window.screen.width : 화면의 가로 값을 가져옵니다.</a></li>
+            <li><a href="#sample05">브라우저 객체 : screen 객체 속성 : window.screen.height : 화면의 세로 값을 가져옵니다.</a></li>
+            <li><a href="#sample05">브라우저 객체 : screen 객체 속성 : window.screen.availWidth : 실제 이용 가능한 화면의 가로 값을 가져옵니다.</a></li>
+            <li><a href="#sample05">브라우저 객체 : screen 객체 속성 : window.screen.availHeight : 실제 이용 가능한 화면의 세로 값을 가져옵니다.</a></li>
+            <li><a href="#sample05">브라우저 객체 : screen 객체 속성 : window.screen.colorDepth : 사용 가능한 색상 수를 바꿀수 있습니다.</a></li>
+            <li><a href="#sample05">브라우저 객체 : screen 객체 속성 : window.screen.pixelDepth : 한 픽셀당 비트 수를 바꿀수 있습니다.</a></li>
+
+            <br>
+
+            <li><a href="#sample06">브라우저 객체 : navigator 객체 속성 : navigator.appCodeName : 브라우저의 코드명을 반환</a></li>
+            <li><a href="#sample06">브라우저 객체 : navigator 객체 속성 : navigator.appName : 브라우저의 이름을 반환</a></li>
+            <li><a href="#sample06">브라우저 객체 : navigator 객체 속성 : navigator.appVersion : 브라우저의 버전을 반환</a></li>
+            <li><a href="#sample06">브라우저 객체 : navigator 객체 속성 : navigator.cookieEnabled : 브라우저의 쿠키 사용 가능 여부를 반환</a></li>
+            <li><a href="#sample06">브라우저 객체 : navigator 객체 속성 : navigator.language : 브라우저에서 사용되는 언어를 반환</a></li>
+            <li><a href="#sample06">브라우저 객체 : navigator 객체 속성 : navigator.onLine : 브라우저가 온라인인지 여부를 반환</a></li>
+            <li><a href="#sample06">브라우저 객체 : navigator 객체 속성 : navigator.platform : 브라우저가 실행되는 플랫폼 정보를 반환</a></li>
+            <li><a href="#sample06">브라우저 객체 : navigator 객체 속성 : navigator.product : 브라우저에서 사용되는 엔진 이름을 반환</a></li>
+            <li><a href="#sample06">브라우저 객체 : navigator 객체 속성 : navigator.userAgent : 브라우저와 운영체제 정보를 반환</a></li>
         </ol>
     </div>
 
@@ -365,6 +367,298 @@
         });
     </script>
     <!-- //sample04 -->
+
+    <hr>
+
+    <!-- sample05 -->
+    <div id="sample05" class="sample">
+        <h2>05. 브라우저 객체 : screen 객체 속성<span class="dot"></span></h2>
+        <div class="view ex4">
+            <p class="text text5-1"></p>
+            <p class="text text5-2"></p>
+            <p class="text text5-3"></p>
+            <p class="text text5-4"></p>
+            <p class="text text5-5"></p>
+            <p class="text text5-6"></p>
+        </div>
+        <div class="btn">
+            <a href="#c" class="btn5-1">클릭하면 화면의 가로 값을 가져옵니다.</a>
+            <a href="#c" class="btn5-2">클릭하면 화면의 세로 값을 가져옵니다.</a>
+            <a href="#c" class="btn5-3">클릭하면 화면의 실제 이용 가능한 화면의 가로 값을 가져옵니다.</a>
+            <a href="#c" class="btn5-4">클릭하면 화면의 실제 이용 가능한 화면의 세로 값을 가져옵니다.</a>
+            <a href="#c" class="btn5-5">클릭하면 화면의 사용 가능한 색상 수를 가져옵니다.</a>
+            <a href="#c" class="btn5-6">클릭하면 화면의 픽셀당 비트 수를 가져옵니다.</a>
+        </div>
+        <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    const btn51 = document.querySelector(".btn5-1");
+    const btn52 = document.querySelector(".btn5-2");
+    const btn53 = document.querySelector(".btn5-3");
+    const btn54 = document.querySelector(".btn5-4");
+    const btn55 = document.querySelector(".btn5-5");
+    const btn56 = document.querySelector(".btn5-6");
+
+    let screenWidth = screen.width;
+    let screenHeight = screen.height;
+    let screenAvailWidth = screen.availWidth;
+    let screenAvailHeight = screen.availHeight;
+    let colorDepth = screen.colorDepth;
+    let pixelDepth = screen.pixelDepth;
+
+    // btn51.addEventListener("click", function(){
+    //     document.querySelector(".text5-1").innerHTML = screenWidth;
+    // })
+    // btn52.addEventListener("click", function(){
+    //     document.querySelector(".text5-2").innerHTML = screenHeight;
+    // })
+    // btn53.addEventListener("click", function(){
+    //     document.querySelector(".text5-3").innerHTML = screenAvailWidth;
+    // })
+    // btn54.addEventListener("click", function(){
+    //     document.querySelector(".text5-4").innerHTML = screenAvailHeight;
+    // })
+    // btn55.addEventListener("click", function(){
+    //     document.querySelector(".text5-5").innerHTML = colorDepth;
+    // })
+    // btn56.addEventListener("click", function(){
+    //     document.querySelector(".text5-6").innerHTML = pixelDepth;
+    // })
+
+    const name = [screenWidth, screenHeight, screenAvailWidth, screenAvailHeight, colorDepth, pixelDepth];
+
+    // for(let i=1; i&lt;=name.length; i++){
+    //     document.querySelector(".btn5-"+i).addEventListener("click", () => {
+    //         document.querySelector(".text5-"+i).innerHTML = name[i-1];
+    //     });
+    // }
+    // for(let i=1; i&lt;=6; i++){
+    //     document.querySelector(`.btn5-${i}`).addEventListener("click", () => {
+    //         document.querySelector(`.text5-${i}`).innerHTML = name[i-1]
+    //     })
+    // }
+
+    name.forEach((element, index) => {
+        document.querySelector(`.btn5-${index+1}`).addEventListener("click", () => {
+            document.querySelector(`.text5-${index+1}`).innerHTML = name[index];
+        })
+    });
+}
+</code></pre>
+        </div>
+    </div>
+    <script>
+        const btn51 = document.querySelector(".btn5-1");
+        const btn52 = document.querySelector(".btn5-2");
+        const btn53 = document.querySelector(".btn5-3");
+        const btn54 = document.querySelector(".btn5-4");
+        const btn55 = document.querySelector(".btn5-5");
+        const btn56 = document.querySelector(".btn5-6");
+
+        let screenWidth = screen.width;
+        let screenHeight = screen.height;
+        let screenAvailWidth = screen.availWidth;
+        let screenAvailHeight = screen.availHeight;
+        let colorDepth = screen.colorDepth;
+        let pixelDepth = screen.pixelDepth;
+
+        // btn51.addEventListener("click", function(){
+        //     document.querySelector(".text5-1").innerHTML = screenWidth;
+        // })
+        // btn52.addEventListener("click", function(){
+        //     document.querySelector(".text5-2").innerHTML = screenHeight;
+        // })
+        // btn53.addEventListener("click", function(){
+        //     document.querySelector(".text5-3").innerHTML = screenAvailWidth;
+        // })
+        // btn54.addEventListener("click", function(){
+        //     document.querySelector(".text5-4").innerHTML = screenAvailHeight;
+        // })
+        // btn55.addEventListener("click", function(){
+        //     document.querySelector(".text5-5").innerHTML = colorDepth;
+        // })
+        // btn56.addEventListener("click", function(){
+        //     document.querySelector(".text5-6").innerHTML = pixelDepth;
+        // })
+
+        const name = [screenWidth, screenHeight, screenAvailWidth, screenAvailHeight, colorDepth, pixelDepth];
+
+        // for(let i=1; i<=name.length; i++){
+        //     document.querySelector(".btn5-"+i).addEventListener("click", () => {
+        //         document.querySelector(".text5-"+i).innerHTML = name[i-1];
+        //     });
+        // }
+        // for(let i=1; i<=6; i++){
+        //     document.querySelector(`.btn5-${i}`).addEventListener("click", () => {
+        //         document.querySelector(`.text5-${i}`).innerHTML = name[i-1]
+        //     })
+        // }
+
+        name.forEach((element, index) => {
+            document.querySelector(`.btn5-${index+1}`).addEventListener("click", () => {
+                document.querySelector(`.text5-${index+1}`).innerHTML = name[index];
+            })
+        });
+    </script>
+    <!-- //sample05 -->
+
+    <hr>
+
+    <!-- sample06 -->
+    <div id="sample06" class="sample">
+        <h2>06. 브라우저 객체 : navigator 객체 속성<span class="dot"></span></h2>
+        <div class="view ex4">
+            <p class="text text6-1"></p>
+            <p class="text text6-2"></p>
+            <p class="text text6-3"></p>
+            <p class="text text6-4"></p>
+            <p class="text text6-5"></p>
+            <p class="text text6-6"></p>
+            <p class="text text6-7"></p>
+            <p class="text text6-8"></p>
+            <p class="text text6-9"></p>
+        </div>
+        <div class="btn">
+            <a href="#c" class="btn6-1">클릭하면 브라우저의 코드명을 가져옵니다.</a>
+            <a href="#c" class="btn6-2">클릭하면 브라우저의 이름을 가져옵니다.</a>
+            <a href="#c" class="btn6-3">클릭하면 브라우저의 버전을 가져옵니다.</a>
+            <a href="#c" class="btn6-4">클릭하면 쿠키 사용 가능 여부 정보를 가져옵니다.</a>
+            <a href="#c" class="btn6-5">클릭하면 브라우저에서 사용되는 언어 정보를 가져옵니다.</a>
+            <a href="#c" class="btn6-6">클릭하면 온라인 여부 정보를 가져옵니다.</a>
+            <a href="#c" class="btn6-7">클릭하면 플랫폼 정보를 가져옵니다.</a>
+            <a href="#c" class="btn6-8">클릭하면 브라우저 엔진 이름을 가져옵니다.</a>
+            <a href="#c" class="btn6-9">클릭하면 운영체제 정보를 가져옵니다.</a>
+        </div>
+        <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    const btn61 = document.querySelector(".btn6-1");
+    const btn62 = document.querySelector(".btn6-2");
+    const btn63 = document.querySelector(".btn6-3");
+    const btn64 = document.querySelector(".btn6-4");
+    const btn65 = document.querySelector(".btn6-5");
+    const btn66 = document.querySelector(".btn6-6");
+    const btn67 = document.querySelector(".btn6-7");
+    const btn68 = document.querySelector(".btn6-8");
+    const btn69 = document.querySelector(".btn6-9");
+
+    var nowAppCodeName = navigator.appCodeName;
+    var nowAppName = navigator.appName;
+    var nowAppVersion = navigator.appVersion;
+    var nowCookieEnabled = navigator.cookieEnabled;
+    var nowLanguage = navigator.language;
+    var nowOnLine = navigator.onLine;
+    var nowPlatform = navigator.platform;
+    var nowProduct = navigator.product;
+    var nowUserAgent = navigator.userAgent;
+
+    // btn61.addEventListener("click", () => {
+    //     document.querySelector(".text6-1").innerHTML = nowAppCodeName;
+    // })
+    // btn62.addEventListener("click", () => {
+    //     document.querySelector(".text6-2").innerHTML = nowAppName;
+    // })
+    // btn63.addEventListener("click", () => {
+    //     document.querySelector(".text6-3").innerHTML = nowAppVersion;
+    // })
+    // btn64.addEventListener("click", () => {
+    //     document.querySelector(".text6-4").innerHTML = nowCookieEnabled;
+    // })
+    // btn65.addEventListener("click", () => {
+    //     document.querySelector(".text6-5").innerHTML = nowLanguage;
+    // })
+    // btn66.addEventListener("click", () => {
+    //     document.querySelector(".text6-6").innerHTML = nowOnLine;
+    // })
+    // btn67.addEventListener("click", () => {
+    //     document.querySelector(".text6-7").innerHTML = nowPlatform;
+    // })
+    // btn68.addEventListener("click", () => {
+    //     document.querySelector(".text6-8").innerHTML = nowProduct;
+    // })
+    // btn69.addEventListener("click", () => {
+    //     document.querySelector(".text6-9").innerHTML = nowUserAgent;
+    // })
+
+    const name1 = [nowAppCodeName, nowAppName, nowAppVersion, nowCookieEnabled, nowLanguage, nowOnLine, nowPlatform, nowProduct, nowUserAgent];
+
+    // for(let i=1; i<=9; i++){
+    //     document.querySelector(".btn6-"+i).addEventListener("click", () => {
+    //         document.querySelector(".text6-"+i).innerHTML = name1[i-1];
+    //     })
+    // }
+
+    name1.forEach((el, index) => {
+        document.querySelector(".btn6-"+(index+1)).addEventListener("click", () => {
+            document.querySelector(".text6-"+(index+1)).innerHTML = name1[index];
+        })
+    })
+}
+</code></pre>
+        </div>
+    </div>
+    <script>
+        const btn61 = document.querySelector(".btn6-1");
+        const btn62 = document.querySelector(".btn6-2");
+        const btn63 = document.querySelector(".btn6-3");
+        const btn64 = document.querySelector(".btn6-4");
+        const btn65 = document.querySelector(".btn6-5");
+        const btn66 = document.querySelector(".btn6-6");
+        const btn67 = document.querySelector(".btn6-7");
+        const btn68 = document.querySelector(".btn6-8");
+        const btn69 = document.querySelector(".btn6-9");
+
+        var nowAppCodeName = navigator.appCodeName;
+        var nowAppName = navigator.appName;
+        var nowAppVersion = navigator.appVersion;
+        var nowCookieEnabled = navigator.cookieEnabled;
+        var nowLanguage = navigator.language;
+        var nowOnLine = navigator.onLine;
+        var nowPlatform = navigator.platform;
+        var nowProduct = navigator.product;
+        var nowUserAgent = navigator.userAgent;
+
+        // btn61.addEventListener("click", () => {
+        //     document.querySelector(".text6-1").innerHTML = nowAppCodeName;
+        // })
+        // btn62.addEventListener("click", () => {
+        //     document.querySelector(".text6-2").innerHTML = nowAppName;
+        // })
+        // btn63.addEventListener("click", () => {
+        //     document.querySelector(".text6-3").innerHTML = nowAppVersion;
+        // })
+        // btn64.addEventListener("click", () => {
+        //     document.querySelector(".text6-4").innerHTML = nowCookieEnabled;
+        // })
+        // btn65.addEventListener("click", () => {
+        //     document.querySelector(".text6-5").innerHTML = nowLanguage;
+        // })
+        // btn66.addEventListener("click", () => {
+        //     document.querySelector(".text6-6").innerHTML = nowOnLine;
+        // })
+        // btn67.addEventListener("click", () => {
+        //     document.querySelector(".text6-7").innerHTML = nowPlatform;
+        // })
+        // btn68.addEventListener("click", () => {
+        //     document.querySelector(".text6-8").innerHTML = nowProduct;
+        // })
+        // btn69.addEventListener("click", () => {
+        //     document.querySelector(".text6-9").innerHTML = nowUserAgent;
+        // })
+
+        const name1 = [nowAppCodeName, nowAppName, nowAppVersion, nowCookieEnabled, nowLanguage, nowOnLine, nowPlatform, nowProduct, nowUserAgent];
+
+        // for(let i=1; i<=9; i++){
+        //     document.querySelector(".btn6-"+i).addEventListener("click", () => {
+        //         document.querySelector(".text6-"+i).innerHTML = name1[i-1];
+        //     })
+        // }
+
+        name1.forEach((el, index) => {
+            document.querySelector(".btn6-"+(index+1)).addEventListener("click", () => {
+                document.querySelector(".text6-"+(index+1)).innerHTML = [index+1] + ". " + name1[index];
+            })
+        })
+    </script>
+    <!-- //sample06 -->
 
     <hr>
 
