--- a/site/menuType.html
+++ b/site/menuType.html
@@ -22,7 +22,7 @@
 <body class="dark">
     <!-- header -->
     <header id="header">
-        <div class="container">
+        <div class="container1">
             <div class="header-three">
                 <h1>
                     <a href="main.html">KDONG</a>
