--- a/site/textType.html
+++ b/site/textType.html
@@ -25,13 +25,40 @@
     <!-- type="text/css" 는 생략 가능 -->
 </head>
 <body>
-    <!-- imgType01 -->
-    <section class="imgType">
-        <div class="container">
+    <!-- NaverType01 -->
 
+    <!-- header -->
+    <header id="header">
+        <div class="container">
+            <div class="header-three">
+                <h1>
+                    <a href="main.html">KDONG</a>
+                </h1>
+                <nav class="menu">
+                    <ul>
+                        <li><a href="cardType.html">cardType</a></li>
+                        <li><a href="#">메뉴 아이템</a></li>
+                        <li><a href="#">메뉴 아이템</a></li>
+                        <li><a href="#">메뉴 아이템</a></li>
+                        <li><a href="#">메뉴 아이템</a></li>
+                    </ul>
+                </nav>
+                <div class="member">
+                    <a href="#" class="btn-style radius">회원가입</a>
+                    <a href="#" class="btn-style radius">로그인</a>
+                </div>
+            </div>
         </div>
+    </header>
+    <!-- //header -->
+
+    <!-- section -->
+    <section class="NaverType">
+        
     </section>
-    <!-- //imgType01 -->
+    <!-- //section -->
+    
+    <!-- //NaverType01 -->
 </body>
 </html> 
 
