--- a/refer-javascript/javascriptReferBook.html
+++ b/refer-javascript/javascriptReferBook.html
@@ -66,7 +66,7 @@
     <h2 class="mt20"><a href="javascriptReferBook.html">레퍼런스북</a></h2>
     <div class="list">
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fx9QOw0LcUCNn1jvThaWCAZ%2FHTML-Reference-Book%3Fnode-id%3D195%253A4910" allowfullscreen></iframe>
-        <p class="p">코드 보기<a class="a" href="https://www.figma.com/proto/x9QOw0LcUCNn1jvThaWCAZ/HTML-Reference-Book?page-id=195%3A4910&node-id=195%3A6471&viewport=241%2C48%2C0.05&scaling=min-zoom">View</a></p>
+        <p class="p">레퍼런스북 보기<a class="a" href="https://www.figma.com/proto/x9QOw0LcUCNn1jvThaWCAZ/HTML-Reference-Book?page-id=195%3A4910&node-id=195%3A6471&viewport=241%2C48%2C0.05&scaling=min-zoom">View</a></p>
     </div>
 
     <hr>
