--- a/refer-effect/menuEffect/javascriptME01.html
+++ b/refer-effect/menuEffect/javascriptME01.html
@@ -366,6 +366,9 @@ tabBtn.forEach((element, index) => {
     <!-- script -->
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
+    <script>
+        modal();
+    </script>
     <!-- //script -->
 </body>
 </html>
