--- a/refer-effect/menuEffect/jqueryME01.html
+++ b/refer-effect/menuEffect/jqueryME01.html
@@ -363,6 +363,9 @@ tabBtn.click(function(){
     <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
+    <script>
+        modal();
+    </script>
     <!-- //script -->
 </body>
 </html>
