--- a/refer-jquery/jqueryRefer02.html
+++ b/refer-jquery/jqueryRefer02.html
@@ -233,7 +233,7 @@
                         <tr>
                             <td>.each() ❤️</td>
                             <td>$("selector").each()</td>
-                            <td>-</td>
+                            <td>forEach</td>
                             <td></td>
                         </tr>
                         <tr>
