--- a/refer-effect/menuEffect/javascriptME01.html
+++ b/refer-effect/menuEffect/javascriptME01.html
@@ -157,7 +157,7 @@
 
     <!-- info -->
     <div class="info">
-        <h1>javascript Menu Effect01</h1>
+        <h1><a href="index.html">javascript Menu Effect01</a></h1>
         <p>메뉴 이펙트 - 탭 메뉴</p>
     </div>
 
