--- a/refer-effect/parallaxEffext/index.html
+++ b/refer-effect/parallaxEffext/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
 </head>
-<body id="main" class="parallax">
+<body id="main" class="parallaxMain">
     <div id="canvas"></div>
 
     <div id="contents">
