--- a/refer-effect/mouseEffect/javascriptME01.html
+++ b/refer-effect/mouseEffect/javascriptME01.html
@@ -149,7 +149,7 @@
             <li>screenY : <span class="screenY">0</span></li>
         </ul>
     </div>
-    <!-- //info left -->
+    <!-- //info left list -->
 
     <div class="info bottom">
         <button>소스보기</button>
@@ -177,15 +177,200 @@
                 </div>
                 <div class="view-cont">
                     <div class="html">
-<pre><code class="language-html">
+<pre><code class="language-html">&lt;main&gt;
+    &lt;div class="cursor"&gt;&lt;/div&gt;
+
+    &lt;article class="mouseCont"&gt;
+            &lt;p&gt;&lt;span class="style1"&gt;She&lt;/span&gt; can do, &lt;span class="style2"&gt;he&lt;/span&gt; can do,  why not &lt;span class="style3"&gt;me?&lt;/span&gt;&lt;/p&gt;
+            &lt;h2&gt;&lt;span class="style4"&gt;그녀도&lt;/span&gt; 하고&lt;span class="style5"&gt; 그도&lt;/span&gt; 하는데 &lt;/span&gt;&lt;span class="style6"&gt;나라고&lt;/span&gt; 왜 못해?&lt;/h2&gt;
+    &lt;/article&gt;
+&lt;/main&gt;
 </code></pre>
                     </div>
                     <div class="css">
-<pre><code class="language-css">
+<pre><code class="language-css">.mouseCont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: #fff;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    font-family: 'S-CoreDream';
+    cursor: none;
+}
+.mouseCont p {
+    font-size: 2.5vw;
+    line-height: 2.3;
+    font-weight: 300;
+}
+.mouseCont h2 {
+    font-size: 3vw;
+    font-weight: normal;
+    font-weight: 400;
+}
+.mouseCont span {
+    font-style: normal;
+    border-bottom: 0.2vw dashed #fff;
+}
+.cursor {
+    position: absolute;
+    left: 0; top: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    z-index: 9999;
+    background-color: rgba(255,255,255,0.1);
+    user-select: none;
+    pointer-events: none;
+    transition: 
+        background-image .2s,
+        background-color .2s,
+        border-color .2s,
+        border-radius .2s,
+        transform .8s
+}
+.cursor.style1 {
+    background-color: rgba(255, 165, 0, 0.4);
+    border-color: orange;
+    transform: scale(2);
+}
+.cursor.style2 {
+    background-color: rgb(140, 0, 255, 0.4);
+    border-color: rgb(140, 0, 255);
+    transform: rotateY(720deg) scale(1.5);
+    border-radius: 5px;
+}
+.cursor.style3 {
+    background-image: url(https://kdong1224.github.io/dothome21/class/img/img01.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: #CA9CE16e;
+    border-color: #CA9CE1;
+    transform: rotate3d(0,1,1,1080deg) scale(1.5);
+    border-radius: 10px;
+}
+.cursor.style4 {
+    background-color: #DFBBB16e;
+    border-color: #DFBBB1;
+    transform: rotate3d(0,1,1,360deg) rotate(20deg) scale(1.5);
+    transform-origin: 20% 100%;
+    border-radius: 50px;
+}
+.cursor.style5 {
+    background-color: #662E9B6e;
+    border-color: #662E9B;
+    transform: rotateX(1080deg) scale(1.5);
+    border-radius: 5px;
+}
+.cursor.style6 {
+    background-image: url(https://kdong1224.github.io/dothome21/class/img/img07.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: #F242366e;
+    border-color: #F24236;
+    transform: rotate(1080deg) scale(1.5);
+    border-radius: 10px;
+}
 </code></pre>
                     </div>
                     <div class="javascript">
-<pre><code class="language-js">
+<pre><code class="language-js">// 출력용
+window.addEventListener("mousemove", (e) => {
+    document.querySelector(".clientX").innerText = e.clientX + "px";   //브라우저 X좌표 기준
+    document.querySelector(".clientY").innerText = e.clientY + "px";   //브라우저 Y좌표 기준
+    document.querySelector(".offsetX").innerText = e.offsetX + "px";   //요소 X좌표 기준
+    document.querySelector(".offsetY").innerText = e.offsetY + "px";   //요소 Y좌표 기준
+    document.querySelector(".pageX").innerText = e.pageX + "px";      //페이지 X좌표 기준
+    document.querySelector(".pageY").innerText = e.pageY + "px";      //페이지 Y좌표 기준
+    document.querySelector(".screenX").innerText = e.screenX + "px";   //디바이스 X좌표 기준
+    document.querySelector(".screenY").innerText = e.screenY + "px";   //디바이스 Y좌표 기준
+});
+
+// 마우스 움직임
+window.addEventListener("mousemove", function(e){
+    // document.querySelector(".cursor").style.left = e.clientX -25 + "px";
+    // document.querySelector(".cursor").style.top = e.clientY -25 + "px";
+
+    let x = e.clientX -25 + "px"
+    let y = e.clientY -25 + "px"
+
+    document.querySelector(".cursor").style.cssText = "left:" + x + "; top:" + y;
+
+    // 하나씩 써주는 방법
+    // document.querySelector(".mouseCont .style1").addEventListener("mouseover", function(){
+    //     document.querySelector(".cursor").classList.add("style1");
+    // });
+    // document.querySelector(".mouseCont .style1").addEventListener("mouseout", function(){
+    //     document.querySelector(".cursor").classList.remove("style1");
+    // });
+    // document.querySelector(".mouseCont .style2").addEventListener("mouseover", function(){
+    //     document.querySelector(".cursor").classList.add("style2");
+    // });
+    // document.querySelector(".mouseCont .style2").addEventListener("mouseout", function(){
+    //     document.querySelector(".cursor").classList.remove("style2");
+    // });
+    // document.querySelector(".mouseCont .style3").addEventListener("mouseover", function(){
+    //     document.querySelector(".cursor").classList.add("style3");
+    // });
+    // document.querySelector(".mouseCont .style3").addEventListener("mouseout", function(){
+    //     document.querySelector(".cursor").classList.remove("style3");
+    // });
+    // document.querySelector(".mouseCont .style4").addEventListener("mouseover", function(){
+    //     document.querySelector(".cursor").classList.add("style4");
+    // });
+    // document.querySelector(".mouseCont .style4").addEventListener("mouseout", function(){
+    //     document.querySelector(".cursor").classList.remove("style4");
+    // });
+    // document.querySelector(".mouseCont .style5").addEventListener("mouseover", function(){
+    //     document.querySelector(".cursor").classList.add("style5");
+    // });
+    // document.querySelector(".mouseCont .style5").addEventListener("mouseout", function(){
+    //     document.querySelector(".cursor").classList.remove("style5");
+    // });
+    // document.querySelector(".mouseCont .style6").addEventListener("mouseover", function(){
+    //     document.querySelector(".cursor").classList.add("style6");
+    // });
+    // document.querySelector(".mouseCont .style6").addEventListener("mouseout", function(){
+    //     document.querySelector(".cursor").classList.remove("style6");
+    // });
+});
+
+// for문
+// for(let i=1; i&lt;7; i++){
+//     document.querySelector(".mouseCont .style"+i).addEventListener("mouseover", function(){
+//         document.querySelector(".cursor").classList.add("style"+i);
+//     });
+//     document.querySelector(".mouseCont .style"+i).addEventListener("mouseout", function(){
+//         document.querySelector(".cursor").classList.remove("style"+i);
+//     });
+// }
+
+// forEach문
+// document.querySelectorAll(".mouseCont span").forEach((element, index) => {
+//     element.addEventListener("mouseover", () => {
+//         document.querySelector(".cursor").classList.add("style"+(index+1));
+//     });
+//     element.addEventListener("mouseout", () => {
+//         document.querySelector(".cursor").classList.remove("style"+(index+1));
+//     });
+// });
+
+// getAttribute()
+document.querySelectorAll(".mouseCont span").forEach((element) => {
+    let style = element.getAttribute("class");
+
+    element.addEventListener("mouseover", () => {
+        document.querySelector(".cursor").classList.add(style);
+    });
+    element.addEventListener("mouseout", () => {
+        document.querySelector(".cursor").classList.remove(style);
+    });
+});
 </code></pre> 
                     </div>
                 </div>
