--- a/refer-effect/mouseEffect/jqueryME01.html
+++ b/refer-effect/mouseEffect/jqueryME01.html
@@ -177,15 +177,226 @@
                 </div>
                 <div class="view-cont">
                     <div class="html">
-<pre><code class="language-html">
+<pre><code class="language-html">&lt;main&gt;
+    &lt;div class="cursor"&gt;&lt;/div&gt;
+
+    &lt;article class="mouseCont"&gt;
+            &lt;p&gt;&lt;span class="style1"&gt;She&lt;/span&gt; can do, &lt;span class="style2"&gt;he&lt;/span&gt; can do,  why not &lt;span class="style3"&gt;me?&lt;/span&gt;&lt;/p&gt;
+            &lt;h2&gt;&lt;span class="style4"&gt;그녀도&lt;/span&gt; 하고&lt;span class="style5"&gt; 그도&lt;/span&gt; 하는데 &lt;/span&gt;&lt;span class="style6"&gt;나라고&lt;/span&gt; 왜 못해?&lt;/h2&gt;
+    &lt;/article&gt;
+&lt;/main&gt;
 </code></pre>
                     </div>
                     <div class="css">
-<pre><code class="language-css">
+<pre><code class="language-css">.mouseCont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: #fff;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    font-family: 'S-CoreDream';
+    cursor: none;
+}
+.mouseCont p {
+    font-size: 2.5vw;
+    line-height: 2.3;
+    font-weight: 300;
+}
+.mouseCont h2 {
+    font-size: 3vw;
+    font-weight: normal;
+    font-weight: 400;
+}
+.mouseCont span {
+    font-style: normal;
+    border-bottom: 0.2vw dashed #fff;
+}
+.cursor {
+    position: absolute;
+    left: 0; top: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    z-index: 9999;
+    background-color: rgba(255,255,255,0.1);
+    user-select: none;
+    pointer-events: none;
+    transition: 
+        background-image .2s,
+        background-color .2s,
+        border-color .2s,
+        border-radius .2s,
+        transform .8s
+}
+.cursor.style1 {
+    background-color: rgba(255, 165, 0, 0.4);
+    border-color: orange;
+    transform: scale(2);
+}
+.cursor.style2 {
+    background-color: rgb(140, 0, 255, 0.4);
+    border-color: rgb(140, 0, 255);
+    transform: rotateY(720deg) scale(1.5);
+    border-radius: 5px;
+}
+.cursor.style3 {
+    background-image: url(https://kdong1224.github.io/dothome21/class/img/img01.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: #CA9CE16e;
+    border-color: #CA9CE1;
+    transform: rotate3d(0,1,1,1080deg) scale(1.5);
+    border-radius: 10px;
+}
+.cursor.style4 {
+    background-color: #DFBBB16e;
+    border-color: #DFBBB1;
+    transform: rotate3d(0,1,1,360deg) rotate(20deg) scale(1.5);
+    transform-origin: 20% 100%;
+    border-radius: 50px;
+}
+.cursor.style5 {
+    background-color: #662E9B6e;
+    border-color: #662E9B;
+    transform: rotateX(1080deg) scale(1.5);
+    border-radius: 5px;
+}
+.cursor.style6 {
+    background-image: url(https://kdong1224.github.io/dothome21/class/img/img07.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: #F242366e;
+    border-color: #F24236;
+    transform: rotate(1080deg) scale(1.5);
+    border-radius: 10px;
+}
 </code></pre>
                     </div>
                     <div class="javascript">
-<pre><code class="language-js">
+<pre><code class="language-js">// 출력용
+$(window).mousemove(function(e){
+    $(".clientX").text(e.clientX + "px");   //브라우저 X좌표 기준
+});
+$(window).mousemove(function(e){
+    $(".clientY").text(e.clientX + "px");   //브라우저 Y좌표 기준
+});
+$(window).mousemove(function(e){
+    $(".offsetX").text(e.offsetX + "px");   //요소 X좌표 기준
+});
+$(window).mousemove(function(e){
+    $(".offsetY").text(e.offsetY + "px");   //요소 Y좌표 기준
+});
+$(window).mousemove(function(e){
+    $(".pageX").text(e.pageX + "px");       //페이지 X좌표 기준
+});
+$(window).mousemove(function(e){
+    $(".pageY").text(e.pageY + "px");       //페이지 Y좌표 기준
+});
+$(window).mousemove(function(e){
+    $(".screenX").text(e.screenX + "px");   //디바이스 X좌표 기준
+});
+$(window).mousemove(function(e){
+    $(".screenY").text(e.screenY + "px");   //디바이스 Y좌표 기준
+});
+
+// 마우스 움직이기
+$(window).mousemove(function(e){
+    // $(".cursor").css("left","100px");
+    // $(".cursor").css("top","100px");
+    // $(".cursor").css({"left":"100px", "top":"100px"});
+    // $(".cursor").css({left:"100px", top:"100px"});
+    // $(".cursor").css({left:"100px", "background-color":"100px"});
+    // $(".cursor").css({left:"100px", backgroundColor:100});
+    $(".cursor").css({left: e.clientX -25, top: e.clientY -25});
+});
+
+// em태그에 왔을때 변환
+// $(".mouseCont em").mouseover(function(){
+//     $(".cursor").addClass("active");
+// });
+// $(".mouseCont em").mouseout(function(){
+//     $(".cursor").removeClass("active");
+// });
+
+// 한번에 작성
+// $(".mouseCont em").hover(function(){
+//     $(".cursor").addClass("active");
+// }, function(){
+//     $(".cursor").removeClass("active");
+// });
+
+// 이벤트 핸들러 차이
+// $(".mouseCont em").mouseenter(function(){
+//     $(".cursor").addClass("active");
+// });
+// $(".mouseCont em").mouseleave(function(){
+//     $(".cursor").removeClass("active");
+// });
+
+// span태그에 왔을 때 변환
+// $(".mouseCont .style1").hover(function(){
+//     $(".cursor").addClass("style1");
+// }, function(){
+//     $(".cursor").removeClass("style1");
+// });
+// $(".mouseCont .style2").hover(function(){
+//     $(".cursor").addClass("style2");
+// }, function(){
+//     $(".cursor").removeClass("style2");
+// });
+// $(".mouseCont .style3").hover(function(){
+//     $(".cursor").addClass("style3");
+// }, function(){
+//     $(".cursor").removeClass("style3");
+// });
+// $(".mouseCont .style4").hover(function(){
+//     $(".cursor").addClass("style4");
+// }, function(){
+//     $(".cursor").removeClass("style4");
+// });
+// $(".mouseCont .style5").hover(function(){
+//     $(".cursor").addClass("style5");
+// }, function(){
+//     $(".cursor").removeClass("style5");
+// });
+// $(".mouseCont .style6").hover(function(){
+//     $(".cursor").addClass("style6");
+// }, function(){
+//     $(".cursor").removeClass("style6");
+// });
+
+// for문
+// for(let i=1; i&lt;7; i++){
+//     $(".mouseCont .style"+i).hover(function(){
+//         $(".cursor").addClass("style"+i);
+//     }, function(){
+//         $(".cursor").removeClass("style"+i);
+//     });
+// }
+
+// each()
+// $(".mouseCont span").each((index, element) => {
+//     $(element).hover(function(){
+//         $(".cursor").addClass("style"+(index+1));
+//     }, function(){
+//         $(".cursor").removeClass("style"+(index+1));
+//     });
+// });
+
+// attr()
+$(".mouseCont span").hover(function(){
+    // let cla = $(this).attr("class");  //지역변수를 전역변수로 만들어 줘야 한다. 간단히 addClass와 removeClass안에 넣어 준다.
+    // console.log(cla) 확인
+    $(".cursor").addClass($(this).attr("class"));
+}, function(){
+    $(".cursor").removeClass($(this).attr("class"));
+})
 </code></pre> 
                     </div>
                 </div>
