--- a/site/test02.html
+++ b/site/test02.html
@@ -48,7 +48,7 @@
         
         /* body */
         body {
-            font-famliy:'NanumSquare'
+            font-family:'NanumSquare'
         }
         #wrap {
             height: auto;
