--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="webstoryboy">
+    <meta name="author" content="강동재">
     <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">
     <meta name="keywords"
-        content="크동, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design">
+        content="크동, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, 강동재, publisher, css3, html, markup, design">
     <title>크동 | KDONG</title>
 
     <!-- css -->
@@ -361,11 +361,32 @@
                                     <span class="overlay-text-thumb1-donut">이펙트</span>
                                     <span class="overlay-text-thumb2-donut">EFFECT</span>
                                 </div>
-                                <img src="assets/img/svg-pear.svg" alt="portfolio">
+                                <img src="assets/img/svg-carrot.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>EFFECT</h5>
                                     <p>이펙트</p>
                                     <span>EFFECT</span>
+                                </div>
+                            </div>
+                        </a> 
+                    </section>
+                    <!-- //box -->
+                    
+                    <!-- box -->
+                    <section class="color-shape reference">
+                        <a href="site-php/pages/main.php" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">PHP</span>
+                                    <span class="overlay-text-thumb-donut">PHP</span>
+                                    <span class="overlay-text-thumb1-donut">PHP</span>
+                                    <span class="overlay-text-thumb2-donut">PHP</span>
+                                </div>
+                                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>PHP</h5>
+                                    <p>PHP</p>
+                                    <span>PHP</span>
                                 </div>
                             </div>
                         </a> 
