--- a/refer-javascript/javascriptReferBook.html
+++ b/refer-javascript/javascriptReferBook.html
@@ -63,8 +63,8 @@
         </ul>
     </nav>
     
-    <h2 class="mt20"><a href="../site/kdong/tetris/tetris.html">레퍼런스북(tetris)</a></h2>
-    <h2 class="mt20"><a href="../site/kdong/typing/En_typing.html">레퍼런스북(typing)</a></h2>
+    <h2 class="mt20"><a href="../tetris/tetris.html">레퍼런스북(tetris)</a></h2>
+    <h2 class="mt20"><a href="../typing/En_typing.html">레퍼런스북(typing)</a></h2>
     <h2 class="mt20"><a href="../site/kdong/sek/sek.html">레퍼런스북</a></h2>
     <div class="list">
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fx9QOw0LcUCNn1jvThaWCAZ%2FHTML-Reference-Book%3Fnode-id%3D195%253A4910" allowfullscreen></iframe>
